--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -35,6 +35,72 @@ body {
   }
 }
 
+.hero-section {
+  background-image: linear-gradient(
+      0deg,
+      rgba(0, 0, 0, 0.7) 0%,
+      rgba(0, 0, 0, 0.7) 100%
+    ),
+    url('/assets/hero.png');
+
+  background-size: cover;
+  background-position: center;
+
+  height: 100vh;
+
+  .navbar {
+    .navbar-items {
+      color: #fff;
+      font-weight: 400;
+    }
+  }
+
+  .hero-section-contents {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 40px;
+
+    .hero-section-contents-main {
+      transform: translateY(-60px);
+      max-width: 750px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+
+      h1 {
+        color: #fff;
+        font-family: 'DM Serif Display';
+        font-size: 50px;
+        font-weight: 400;
+        text-align: center;
+      }
+
+      p {
+        color: #fff;
+        font-family: Jost;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 32px;
+        text-align: center;
+      }
+
+      a {
+        text-decoration: none;
+        padding: 10px 20px;
+        gap: 10px;
+        background: var(--logo-yellow, #f8952d);
+        color: #fff;
+      }
+    }
+  }
+}
+
 .main-content {
   display: inline-flex;
   align-items: center;
