--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -42,6 +42,10 @@
           color: inherit;
           text-decoration: none;
 
+          .social-icons-logo {
+            font-size: 24px;
+          }
+
           &:hover {
             color: #f8952d;
           }
