--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,15 +4,46 @@
   justify-content: space-between;
   width: 100%;
   gap: 30px;
-  padding: 0 40px;
+  padding: 0 20px;
+
+  .navbar-logo {
+    max-height: 50px;
+  }
 
   .navbar-items {
     display: flex;
     gap: 20px;
-
     font-family: 'Jost';
     font-size: 18px;
     font-weight: 400;
     line-height: 32px;
+
+    @media (max-width: 700px) {
+      position: absolute;
+      width: 250px;
+      top: 60px;
+      box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.2);
+      right: 20px;
+      background-color: white;
+      flex-direction: column;
+      align-items: center;
+      gap: 15px;
+      padding: 20px 0;
+      display: none;
+
+      &.open {
+        display: flex;
+      }
+    }
+  }
+
+  .hamburger {
+    display: none;
+    font-size: 24px;
+    cursor: pointer;
+
+    @media (max-width: 700px) {
+      display: block;
+    }
   }
 }
