--- a/src/app/gallery/gallery.scss
+++ b/src/app/gallery/gallery.scss
@@ -10,19 +10,31 @@
     margin: 30px 0;
   }
 
-  .gallery-box {
+  .main-gallery {
     display: flex;
     justify-content: center;
-    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 40px;
+    padding: 20px;
 
-    .gallery-box-img {
-      overflow: hidden;
+    .gallery-box {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      max-width: 999px;
 
-      img {
-        transition: all 0.3s;
-        &:hover {
-          transform: scale(1.1);
-          filter: brightness(1);
+      .gallery-box-img {
+        overflow: hidden;
+        max-width: 333px;
+
+        img {
+          transition: all 0.3s;
+          &:hover {
+            transform: scale(1.1);
+            filter: brightness(1);
+          }
         }
       }
     }
