--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -5,6 +5,7 @@
   width: 100%;
   gap: 30px;
   padding: 0 20px;
+  z-index: 999;
 
   .navbar-logo {
     max-height: 50px;
@@ -25,6 +26,7 @@
       box-shadow: 0px 4px 24px 0px rgba(0, 0, 0, 0.2);
       right: 20px;
       background-color: white;
+      color: #292f36 !important;
       flex-direction: column;
       align-items: center;
       gap: 15px;
