--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -101,6 +101,11 @@ body {
         border-radius: 5px;
         background: #f8952d;
         color: #fff;
+        transition: all 0.3s;
+
+        &:hover {
+          background: #fd8300;
+        }
       }
     }
   }
@@ -199,57 +204,65 @@ body {
 }
 
 .specifications {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  display: flex;
   justify-items: center;
   align-items: center;
-  gap: 60px;
   background: #f4f0ec;
-  padding: 80px 20px;
-  border: 2px solid black;
 
-  @media (max-width: 768px) {
-    grid-template-columns: 1fr;
-  }
-
-  .specification-item {
-    border: 2px solid black;
-    width: fit-content;
+  .specifications-content {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     align-items: center;
-    gap: 12px;
+    justify-content: center;
+    width: 1100px;
+    margin: 0 auto;
+    gap: 40px;
+    padding: 20px 20px;
+    // border: 2px solid red;
 
-    .specification-icon {
-      width: 40px;
-      height: 40px;
+    .specification-item {
+      padding: 20px;
+      height: 240px;
+      width: fit-content;
       display: flex;
-      justify-content: center;
+      flex-direction: column;
       align-items: center;
-      background-color: #f4f4f4;
-      border-radius: 50%;
-      font-size: 2px;
-      color: #f8952d;
+      justify-content: center;
+      gap: 12px;
+      background-color: #fefaf6;
+      border-radius: 5px;
 
-      svg {
-        width: 100%;
-        height: 100%;
+      .specification-icon {
+        width: 40px;
+        height: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+        font-size: 2px;
+        color: #f8952d;
+
+        svg {
+          width: 100%;
+          height: 100%;
+        }
       }
-    }
 
-    p {
-      color: var(--font-dark, #292f36);
-      text-align: center;
-      font-family: Jost;
-      font-size: 18px;
-      font-weight: 400;
-      line-height: 120%;
-      letter-spacing: 0.2px;
-    }
+      p {
+        color: #292f36;
+        width: 200px;
+        text-align: center;
+        font-family: Jost;
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 120%;
+        letter-spacing: 0.2px;
+      }
 
-    .specification-description {
-      font-size: 16px;
-      max-width: 260px;
+      .specification-description {
+        font-size: 16px;
+        width: 280px;
+      }
     }
   }
 }
