--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -80,6 +80,7 @@ body {
         color: #fff;
         font-family: 'DM Serif Display';
         font-size: 50px;
+        line-height: 110%;
         font-weight: 400;
         // text-align: center;
       }
@@ -90,7 +91,7 @@ body {
         max-width: 640px;
         font-size: 18px;
         font-weight: 400;
-        line-height: 32px;
+        line-height: 28px;
         // text-align: center;
       }
 
@@ -287,12 +288,26 @@ body {
 
   .services-cards {
     display: flex;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 40px;
-    width: 100%;
+    max-width: 1100px;
+    margin: 0 auto;
+
     flex-wrap: wrap;
   }
+}
+
+.testimonials-section {
+  padding: 40px 20px;
+  background: #f4f0ec;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  width: 100%;
 }
 
 .testimonial {
