--- a/src/components/Testimonial/TestimonialCard.scss
+++ b/src/components/Testimonial/TestimonialCard.scss
@@ -1,3 +1,51 @@
+.testimonial {
+  position: relative;
+  overflow: hidden;
+  max-width: 1000px;
+  padding: 20px;
+  margin: 0 auto;
+
+  .testimonial-heading {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+
+  .testimonial-cards {
+    overflow: hidden;
+    position: relative;
+  }
+
+  .testimonial-cards-container {
+    display: flex;
+    gap: 20px;
+    transition: transform 0.5s ease;
+    width: 100%;
+  }
+
+  .controls {
+    position: absolute;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    top: 50%;
+    transform: translateY(50px);
+
+    button {
+      background: transparent;
+      border: none;
+      cursor: pointer;
+      font-size: 24px;
+      color: #292f36;
+
+      background-color: #fff;
+      padding: 20px;
+      border-radius: 50%;
+
+      box-shadow: 0px 4px 35px 0px rgba(0, 0, 0, 0.15);
+    }
+  }
+}
+
 .testimonial-card {
   display: flex;
   flex-direction: column;
@@ -8,6 +56,12 @@
   border: 2px solid #e5e7eb;
   background-color: white;
   width: 340px;
+  transition: transform 0.5s ease;
+
+  &.active {
+    transform: scale(1.1);
+    z-index: 1;
+  }
 
   &-header {
     display: flex;
