--- a/src/app/railings/railings.scss
+++ b/src/app/railings/railings.scss
@@ -7,7 +7,7 @@
     line-height: 125%;
     letter-spacing: 0.8px;
     text-align: center;
-    margin: 30px 0;
+    margin: 50px 0;
   }
 
   .railings-sections {
@@ -57,6 +57,7 @@
       img {
         border-radius: 0px 160px 0px 0px;
         flex-shrink: 0;
+        max-width: 350px;
       }
     }
 
@@ -79,8 +80,9 @@
     .railings-video-content {
       position: relative;
       width: 100%;
-      max-width: 800px;
-      padding-bottom: 56.25%;
+      max-width: 750px;
+      // padding-bottom: 35%;
+      padding-bottom: 400px;
 
       iframe {
         position: absolute;
@@ -110,6 +112,10 @@
     .railings-sections:nth-of-type(even) img {
       border-radius: 0px 160px 0px 0px;
     }
+
+    .railings-video .railings-video-content {
+      max-width: 100%;
+    }
   }
 
   @media (max-width: 480px) {
@@ -120,6 +126,10 @@
 
     .railings-sections img {
       border-radius: 0;
+    }
+
+    .railings-video .railings-video-content {
+      padding-bottom: 60%;
     }
   }
 }
