--- a/src/app/windows/windows.scss
+++ b/src/app/windows/windows.scss
@@ -7,7 +7,7 @@
     line-height: 125%;
     letter-spacing: 0.8px;
     text-align: center;
-    margin: 30px 0;
+    margin: 50px 0;
   }
 
   .windows-sections {
@@ -68,6 +68,7 @@
       img {
         border-radius: 0px 160px 0px 0px;
         flex-shrink: 0;
+        max-width: 350px;
       }
     }
 
@@ -90,8 +91,8 @@
     .windows-video-content {
       position: relative;
       width: 100%;
-      max-width: 800px;
-      padding-bottom: 56.25%;
+      max-width: 750px;
+      padding-bottom: 400px;
 
       iframe {
         position: absolute;
@@ -121,6 +122,10 @@
     .windows-sections:nth-of-type(even) img {
       border-radius: 0px 160px 0px 0px;
     }
+
+    .windows-video .windows-video-content {
+      max-width: 100%;
+    }
   }
 
   @media (max-width: 480px) {
@@ -131,6 +136,10 @@
 
     .windows-sections img {
       border-radius: 0;
+    }
+
+    .windows-video .windows-video-content {
+      padding-bottom: 60%;
     }
   }
 }
