--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -23,6 +23,7 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -201,6 +202,17 @@ body {
         }
       }
     }
+
+    .main-description-content {
+      h3 {
+        color: var(--font-dark, #292f36);
+        font-family: 'DM Serif Display';
+        font-size: 24px;
+        font-weight: 400;
+        line-height: 125%;
+        letter-spacing: 0.8px;
+      }
+    }
   }
 }
 
@@ -215,7 +227,7 @@ body {
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    width: 1100px;
+    width: 1200px;
     margin: 0 auto;
     gap: 40px;
     padding: 20px 20px;
@@ -224,7 +236,7 @@ body {
     .specification-item {
       padding: 20px;
       height: 240px;
-      width: fit-content;
+      width: 240px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -234,24 +246,25 @@ body {
       border-radius: 5px;
 
       .specification-icon {
-        width: 40px;
-        height: 40px;
+        width: 60px;
+        height: 60px;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
         font-size: 2px;
         color: #f8952d;
+        background-color: #f4f0ec;
 
         svg {
-          width: 100%;
-          height: 100%;
+          width: 60%;
+          height: 60%;
         }
       }
 
       p {
         color: #292f36;
-        width: 200px;
+        width: 150px;
         text-align: center;
         font-family: Jost;
         font-size: 18px;
