--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -53,6 +53,7 @@
     display: none;
     font-size: 24px;
     cursor: pointer;
+    color: white;
 
     @media (max-width: 700px) {
       display: block;
