--- a/src/components/Testimonial/TestimonialCard.scss
+++ b/src/components/Testimonial/TestimonialCard.scss
@@ -13,15 +13,29 @@
   .testimonial-cards {
     overflow: hidden;
     position: relative;
-  }
 
-  .testimonial-cards-container {
-    display: flex;
-    gap: 20px;
-    width: 100%;
+    .testimonial-cards-container {
+      display: flex;
+      width: 80%;
+      height: 240px;
+      border-radius: 20px;
+      transition: transform 2s ease;
 
-    &.no-transition {
-      transition: none;
+      &.no-transition {
+        transition: none;
+      }
+
+      .testimonial-card {
+        flex: 0 0 100%;
+        max-width: 100%;
+        border-radius: 20px;
+        transition: transform 2s ease;
+
+        .testimonial-card-text {
+          max-width: 340px;
+          text-align: center;
+        }
+      }
     }
   }
 
@@ -31,7 +45,7 @@
     display: flex;
     justify-content: space-between;
     top: 50%;
-    transform: translateY(-50%);
+    transform: translateY(50%);
 
     button {
       background: transparent;
@@ -58,7 +72,8 @@
   border-radius: 50px 0 50px 0;
   border: 2px solid #e5e7eb;
   background-color: white;
-  width: 340px;
+  width: 100%;
+  max-width: 340px;
   transition: transform 0.5s ease;
 
   &.active {
