--- a/src/app/railings/railings.scss
+++ b/src/app/railings/railings.scss
@@ -65,6 +65,8 @@
       flex-direction: row-reverse;
 
       img {
+        height: 280px;
+        width: 300px;
         border-radius: 160px 0px 0px 0px;
       }
     }
