--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -42,7 +42,7 @@ body {
       rgba(0, 0, 0, 0.7) 0%,
       rgba(0, 0, 0, 0.7) 100%
     ),
-    url('/assets/hero.png');
+    url('/assets/hero.jpg');
 
   background-size: cover;
   background-position: center;
