--- a/src/app/shower-enclosures/showerenclosures.scss
+++ b/src/app/shower-enclosures/showerenclosures.scss
@@ -57,7 +57,8 @@
       img {
         border-radius: 0px 160px 0px 0px;
         flex-shrink: 0;
-        max-width: 350px;
+        height: 275px;
+        width: 300px;
       }
     }
 
