--- a/src/components/Testimonial/TestimonialCard.scss
+++ b/src/components/Testimonial/TestimonialCard.scss
@@ -16,25 +16,14 @@
 
     .testimonial-cards-container {
       display: flex;
-      width: 80%;
-      height: 240px;
+      // width: 80%;
+      border: 3px solid red;
+      height: 540px;
       border-radius: 20px;
       transition: transform 2s ease;
 
       &.no-transition {
         transition: none;
-      }
-
-      .testimonial-card {
-        flex: 0 0 100%;
-        max-width: 100%;
-        border-radius: 20px;
-        transition: transform 2s ease;
-
-        .testimonial-card-text {
-          max-width: 340px;
-          text-align: center;
-        }
       }
     }
   }
@@ -55,7 +44,7 @@
       color: #292f36;
 
       background-color: #fff;
-      padding: 20px;
+      padding: 10px;
       border-radius: 50%;
 
       box-shadow: 0px 4px 35px 0px rgba(0, 0, 0, 0.15);
@@ -67,14 +56,24 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 24px;
+  justify-content: center;
+  // padding: 24px;
   gap: 10px;
   border-radius: 50px 0 50px 0;
   border: 2px solid #e5e7eb;
+  border-radius: 20px;
   background-color: white;
-  width: 100%;
-  max-width: 340px;
-  transition: transform 0.5s ease;
+  // width: 100%;
+  height: 600px;
+
+  flex: 0 0 100%;
+  max-width: 100%;
+
+  .testimonial-card-text {
+    max-width: 600px;
+    // min-height: 300px;
+    text-align: center;
+  }
 
   &.active {
     transform: scale(1.1);
@@ -123,6 +122,7 @@
     font-size: 16px;
     font-weight: normal;
     line-height: 1.5;
+    min-width: 340px;
     letter-spacing: 0.2px;
   }
 }
