--- a/src/app/railings/railings.scss
+++ b/src/app/railings/railings.scss
@@ -58,6 +58,7 @@
         border-radius: 0px 160px 0px 0px;
         flex-shrink: 0;
         max-width: 350px;
+        height: 300px;
       }
     }
 
