--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -51,11 +51,12 @@ body {
   position: relative;
 
   .navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    z-index: 10;
+    z-index: 1000;
+    // background-color: rgba(0, 0, 0, 0.3);
 
     .navbar-items {
       color: #fff;
@@ -66,13 +67,14 @@ body {
   .hero-section-contents {
     width: 100%;
     height: 100%;
+    padding-top: 80px;
     display: flex;
     flex-direction: column;
     // align-items: center;
     justify-content: center;
     padding: 20px 40px;
     position: relative;
-    z-index: 1;
+    // z-index: 1;
 
     .hero-section-contents-main {
       // margin-left: 200px;
@@ -85,6 +87,7 @@ body {
       align-items: flex-start;
       justify-content: center;
       gap: 20px;
+      z-index: 1;
 
       h1 {
         color: #fff;
@@ -92,6 +95,7 @@ body {
         font-size: 50px;
         line-height: 110%;
         font-weight: 400;
+        padding-top: 120px;
         // text-align: center;
       }
 
