--- a/src/components/Testimonial/TestimonialCard.scss
+++ b/src/components/Testimonial/TestimonialCard.scss
@@ -87,7 +87,7 @@
   background-color: white;
   flex: 0 0 100%;
   max-width: 100%;
-  padding: 20px 10px;
+  padding: 20px 0px;
   box-sizing: border-box;
   transition: transform 0.3s ease;
 
@@ -108,7 +108,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+    justify-content: center;
   }
 
   &-header {
@@ -172,14 +172,14 @@
   }
 
   &-text-wrapper {
-    width: 100%;
+    padding: 10px;
     max-height: none;
     // overflow-y: visible;
     overflow: hidden;
 
     @media (min-width: 768px) {
-      width: 80%;
-      max-height: 200px;
+      width: 60%;
+      max-height: 300px;
       overflow-y: auto;
       padding-right: 10px;
     }
@@ -188,7 +188,7 @@
   &-text {
     color: #4d5053;
     font-family: 'Jost', sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: normal;
     line-height: 1.5;
     letter-spacing: 0.2px;
@@ -197,8 +197,13 @@
     word-wrap: break-word;
     overflow-wrap: break-word;
 
-    @media (min-width: 768px) {
+    @media screen and (max-width: 768px) {
       font-size: 16px;
+      width: 400px;
+    }
+
+    @media screen and (max-width: 440px) {
+      width: 220px;
     }
   }
 }
