fix getintouch footer

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -90,7 +90,7 @@ body {
       z-index: 1;
 
       h1 {
-        color: #fff;
+        color: #f8952d;
         font-family: 'DM Serif Display';
         font-size: 50px;
         line-height: 110%;
