--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -5,6 +5,7 @@
   padding: 20px;
   width: 100%;
   gap: 50px;
+  background-color: #f4f0ec;
 
   .main-div {
     display: flex;
@@ -39,7 +40,7 @@
         gap: 10px;
 
         a {
-          color: inherit;
+          color: #10528e;
           text-decoration: none;
 
           .social-icons-logo {
@@ -64,15 +65,20 @@
 
       p {
         cursor: pointer;
-        color: #4d5053;
+        color: #10528e;
         font-family: Jost;
         font-size: 16px;
         font-weight: 400;
         line-height: 300%;
         letter-spacing: 0.18px;
 
+        a {
+          color: inherit;
+          text-decoration: none;
+        }
+
         &:hover {
-          cursor: pointer;
+          color: #f8952d;
         }
       }
     }
