--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -90,7 +90,7 @@ body {
       z-index: 1;
 
       h1 {
-        color: #f8952d;
+        color: #c3770f;
         font-family: 'DM Serif Display';
         font-size: 50px;
         line-height: 110%;
@@ -114,7 +114,7 @@ body {
         padding: 10px 20px;
         gap: 10px;
         border-radius: 5px;
-        background: #f8952d;
+        background: #c3770f;
         color: #fff;
         transition: all 0.3s;
 
