--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -6,6 +6,7 @@
   gap: 30px;
   padding: 0 40px;
   z-index: 999;
+  background-color: rgba(50, 48, 50, 0.5);
 
   .navbar-logo {
     max-height: 50px;
