fixed navbar getintouch

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -65,7 +65,7 @@
 
       p {
         cursor: pointer;
-        color: #10528e;
+        color: #121212;
         font-family: Jost;
         font-size: 16px;
         font-weight: 400;
